# Stugram-beckend

./: .dockerignore  .env.example  .envNODE_ENV=development  .gitignore  AUDIT_REPORT.md  Dockerfile  LAUNCH_GATE.md  README.md  TODO.md  Untitled.jks  eslint.config.cjs  gradle.properties  jest.config.js  package-lock.json  package.json  plan-fixRunButtonNotWorking.prompt.md  render.yaml  server.js  stugram.jks
.github/workflows/: android-ci.yml  backend-ci.yml
app/: build.gradle.kts  google-services.json
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/native-media/: native_media_jni.cpp
app/src/main/cpp/native-media/audio/: waveform_processor.cpp
app/src/main/cpp/native-media/call/: call_core.cpp
demo/admin-panel/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
docs/: backup-restore.md  closed-alpha-runbook.md  legal-product-ops.md  mongo-users-identity-index-fix.mongosh.js  recommendation-system.md  render-deployment.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
ktor-backend/: build.gradle.kts  gradle.properties
lib/screens/: story_screen.dart
lib/widgets/: comment_section.dart  profile_button.dart  top_nav.dart
models/: Settings.js  User.js
routes/: auth.js  settings.js
scripts/: migrateChatIndexes.js  verifyChatIndexes.js
src/: app.js
src/config/: cloudinary.js  db.js  env.js  firebaseAdmin.js  redis.js
src/controllers/: activityController.js  adminController.js  authController.js  blockController.js  callController.js  chatController.js  (+17 more)
(+374 files in other folders)
